# TargetCapital

./: .dockerignore  .env  .gitignore  .replit  DATABASE_STRUCTURE_REPORT.md  DEPLOYMENT_READINESS.md  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  SETUP_COMPLETE.md  admin_app.py  admin_routes.py  alembic.ini  app.py  celery_app.py  check_research_response.py  config_whatsapp_telegram.py  cookies.txt  create_admin_user.py  create_demo_user.py  create_knowledge_base_articles.py  create_test_user.py  create_testpro_user.py  database_export.sql  design_guidelines.md  email_setup_guide.md  entrypoint.sh  fastapi_app.py  google_auth.py  gunicorn.conf.py  hybrid_app.py  load_additional_assets.py  load_balancer.py  load_insurance.py  load_portfolio_holdings.py  main.py  migrate_add_broker_tracking.py  models.py  models_broker.py  models_vector.py  (+50 more)
.emergent/: emergent.yml
api/: broker_endpoints.py  market_endpoints.py
attached_assets/: Infosys Stock Detailed Analysis (August 2025)_1755431487383.docx  Pasted--Implement-these-requirement-in-the-My-Portfolio-menu-Process-Flow-Unified-Portfolio-Analyz-1755837757334_1755837757335.txt  Pasted--In-the-Dashboard-Research-and-Signals-Like-to-redesign_1765519795481.txt  Pasted--PWA-Service-Worker-registered-https-37403e1a-2e82-46a3-85b8-043df3d84a1e-00-1084bxa2fkbw6-worf--1757997633030_1757997633033.txt  Pasted--PWA-Service-Worker-registered-https-37403e1a-2e82-46a3-85b8-043df3d84a1e-00-1084bxa2fkbw6-worf--1757997876560_1757997876565.txt  Pasted--Reconnecting-to-ws-localhost-8001-attempt-4-websocket-client-js-37-Connecting-to-WebSocket-1757960239238_1757960239243.txt  Pasted--Trade-Now-page-in-dashboard-Create-the-following-tables-with-appropriate-fields-to-modify--1755451103459_1755451103460.txt  Pasted--anonymous-65a88a82efcf9408-js-21Understand-this-error-_1774766008880.txt  Pasted-1-Prerequisites-Before-integration-Have-an-active-Angel-One-trading-account-Register-on-th-1761475955921_1761475955923.txt  Pasted-65a88a82efcf9408-js-21-Missing-field-maxAutonomyEnabled_1774766369773.txt  ind_nifty500list_1767852271055.csv  tc_1752989036666.txt  (+14 more)
(+226 files in other folders)
