[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "nsepython>=2.97",
    "requests>=2.32.4",
    "pandas>=2.3.1",
    "yfinance>=0.2.65",
    "openai>=1.99.9",
    "razorpay>=1.4.2",
    "sendgrid>=6.12.4",
    "requests-cache>=1.2.1",
    "dhanhq>=2.0.2",
    "kiteconnect>=5.0.1",
    "smartapi-python>=1.5.5",
    "cryptography>=45.0.6",
]
