[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "nsepython>=2.97",
    "requests>=2.32.4",
    "pandas>=2.3.1",
    "yfinance>=0.2.65",
    "openai>=1.99.9",
    "razorpay>=1.4.2",
    "sendgrid>=6.12.4",
    "requests-cache>=1.2.1",
    "dhanhq>=2.0.2",
    "kiteconnect>=5.0.1",
    "smartapi-python>=1.5.5",
    "cryptography>=45.0.6",
    "websockets>=15.0.1",
    "redis[hiredis]>=6.4.0",
    "celery>=5.5.3",
    "aioredis>=2.0.1",
    "asyncio-mqtt>=0.16.2",
    "python-socketio>=5.13.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "aiohttp>=3.12.15",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "bleach>=6.2.0",
    "asyncpg>=0.30.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
    "flask-wtf>=1.2.2",
    "flask-limiter>=3.12",
    "flask-talisman>=1.1.0",
]
